CreateEC2Instance_Terraform_UserData/security_group.tf
resource "aws_security_group" "instance_sg" {
  name_prefix = "instance-sg-"
  description = "Security group for EC2 instances"
  vpc_id      = aws_vpc.example.id
  tags = {
    Name = "terraformSG"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
